# tonari-mna

./: .gitignore  AGENT.md  CLAUDE.md  DEPLOY.md  Procfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  vercel.json  wireframe.html
api/: advice.py
backend/: .env.example  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  customers.py  deepdive.py  harassment_check.py  hearing.py  matching.py  mna_project.py  mna_session.py  reflection.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/models/: mna_schemas.py  schemas.py
backend/app/services/: agent.py  knowledge.py  mna_extraction.py  mna_suggestion.py  supabase_client.py
docs/: AGENT-memo.md  ARCHITECTURE.md  CHANGELOG_v2.md  EXPERIMENT_PLAN.md  PIVOT_2025-12-13.md  REQUIREMENTS.md  ai-pipeline-design.md  backend-design.md  confirm_user.sql  create_tables.sql  db-design.md  frontend-design.md  mtg_essence_2024_12.md  seed_interview_checklist.sql  setup_database.sql
docs/requirements/: 01_product_requirements.md  02_mizuno_method_spec.md  03_ui_specification.md  04_technical_architecture.md  05_api_specification.md
docs/tools/: railway.md  supabase.md
frontend/: .env.example  .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/app/: Dashboard.tsx  Layout.tsx  Session.tsx
frontend/src/components/: ConversationLog.tsx  ExtractionPanel.tsx  (+2 more)
public/: app.js  index.html  styles.css  ui-mockup.html
scripts/: seed_test_data.py
関連資材/: 議事録_1224.md
(+12 files in other folders)
