[project]
name = "tonari"
version = "0.1.0"
description = "AI Partner for Interviewers - Real-time conversation support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "supabase>=2.10.0",
    "PyPDF2>=3.0.1",
    "httpx>=0.27.0",
    "deepgram-sdk>=5.3.0",
    "python-pptx>=1.0.2",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
